Temp fix: hide call-to-action banner on mobile

--- a/src/components/menu/MenuBar.scss
+++ b/src/components/menu/MenuBar.scss
@@ -157,8 +157,8 @@
 }
 
 .utility-btn {
-  width: 72px;
-  height: 72px;
+  width: 60px;
+  height: 60px;
   background: #2a2a2a;
   border-radius: 10px;
   display: flex;
